18/07/2014:
	- Fix for unusual JPEG2000 "sRGB" bilevel images.


20/03/2014:
	- Fixed signed/unsigned comparison compiler warning in Task.cc.


16/03/2014:
	- Added back missing <algorithm> include to Task.cc.


12/03/2014:
	- Added ability to handle multi-band (>3 channel) images and added new CTW color twist
	  command that takes a matrix that is applied to each channel in the image.
	- Cleanup of and more comprehensive timing output within JTL.cc.


08/03/2014:
	- Changes to resizing algorithms to enable expansions as well as shrink for all views
	  and regions.
	- Added CORS (Cross Origin Resource Sharing) support via CORS environment variable for
	  (AJAX) metadata requests.


24/02/2014:
	- Added missing function timer to JTL.cc and increased output precision in PFL.cc to 9.


24/01/2014:
	- Changes to IIPImage and KakaduImage constructors to force correct initialization of
	  the tile size.
	- Added missing std::isinfinite function for Windows Visual Studio compilation.


17/01/2013:
	- Fix to rotation code to have array indices run fully down to zero when counting down.
	  Thanks to Michal Becak for spotting this.


06/12/2013:
	- Minor fixes to PFL.cc to add extra error checking and eliminate compiler warnings.


05/12/2013:
	- Another update to use the ISO C++11 version of unordered_map if available. Plus a bunch
	  of compiler warning clean-ups.


04/12/2013:
	- Updated hash map definitions to try to use unordered_map if available and fall back to
	  hash_map or map. Now done more cleanly using autoconf detection.


02/12/2013:
	- Changes to IIPImage, TPTImage and KakaduImage class contstructors to use more efficient
	  member initializer lists, which are also necessary for compilation with clang compiler.


25/11/2013:
	- Bug on red/green/blue colormaps fixed. Adding colormap inversion function (Chiara Marmo).


22/10/2013:
	- Bittype compatibility has been completely reviewed. After normalization all processing
	  is done in float (Chiara Marmo).

