@@ -1,3 +1,9 @@
+19/07/2014:
+	- Added support for magic byte signature file format detection instead of relying on
+	  the file path suffix. Images can now be named arbitrarily (though suffixes still used
+	  for sequences). Format enum types added to IIPImage class.
+
+
 18/07/2014:
 	- Fix for unusual JPEG2000 "sRGB" bilevel images.
 
